add bootstrap in all comp. and remove css

--- a/src/Components/BannersImage.css
+++ b/src/Components/BannersImage.css
@@ -1,22 +1,11 @@
-
-
-#images-slides {
-    width: 50%;
-    margin-top: 18vh;
-    margin-left: 50vh;
-  }
-  
-  .carousel-item {
-    text-align: center;
-  }
-  
   .first,
   .second,
   .third,
-  .fourth {
+  .fourth,
+  .five {
     width: 100%;
-    height: 400px; 
-    object-fit: cover;
+    height: 645px; 
+    /* object-fit: cover; */
   }
   
   
