--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -1,38 +1,30 @@
+body {
+  font-family: 'Arial', sans-serif;
+  
+}
 
-  .add-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    margin-bottom: 10px;
-    width: 100px; 
-    height: 40px; 
-    box-sizing: border-box;
-    margin-left: 93%;
-    margin-top: 1%;
-    
-  }
+.container {
+  max-width: 800%;
   
-  .add-button:hover {
-    background-color: #7b45a0;
-  }
-  
-  .banner-table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #f5f5f5;
-  }
-  
-  .banner-table th, .banner-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .banner-table th {
-    background-color: grey;
-  }
-  
-  
+}
+
+.btn {
+  margin-right: 5px;
+  text-align: center;
+}
+
+.table td,
+.table th {
+  padding: 8px;
+  text-align: center;
+}
+
+.table thead th {
+  text-align: center;
+}
+
+
+
+.btn {
+  text-align: center;
+}
